--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ for c in range(nc):
 								<h2 class="major">Gallery</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
 								<p><br/><b>PLEASE DO NOT STEAL!</b><br />Click at the images to take a closer look.</p>
-								<p>In the last autumn, I submitted some kind of coins for a contest in a really amazing Japanese learning site I use, <a href="https://www.renshuu.org/" target="_blank"><i>renshuu.org</i></a>. The coins used for a gacha system in that site. I'll show them first at the top row because they're so cute.</p>
+								<p>In the last autumn, I submitted some kind of coins for a contest in a really amazing Japanese learning site I use, <a href="https://www.renshuu.org/" target="_blank"><i>renshuu.org</i></a>. The coins used for a gacha system in that site. I'll show them first at the top row because they're so cute, followed by another lovely drawings.</p>
 
 								<div class="gallery">
 									<img src="images/coin-acuteagawa-thumbnail.png" alt="Acutagawa" onclick="openModal('images/coin-acuteagawa.png')">
@@ -123,40 +123,67 @@ for c in range(nc):
 								<p><br/>This big painting below is my favorite. Painted with watercolor on paper, it's a scene in an anime called <i>Hakkenden</i>. It's so beautiful I'm obsessed. But, something is missing. <i>Can you guess what that is?</i></p>
 								<div class="gallery"><img src="images/hakkenden21.jpg" alt="" onclick="openModal('images/hakkenden.jpg')" ></div>
 
-								<p><br/>I don't know but I really love drawing eyes, and I actually have a collection of eyes I doodled on Google Keep on my phone's little screen. If you noticed, I was inspired by the 4 elements in <i>Avatar the Legend of Aang</i>, so... yeah. And in addition, a turquoise eye I painted (doodled) with watercolor on a little piece of paper. And some other Keep notes doodles.</p>
-								<div class="gallery">
-									<img src="images/Forest-thumbnail.png" alt="ATLA" onclick="openModal('images/Forest.png')">
-									<img src="images/Storm-thumbnail.png" alt="ATLA" onclick="openModal('images/Storm.png')">
-									<img src="images/juice-thumbnail.jpg" alt="Orange Juice" onclick="openModal('images/juice.jpg')">
-									<img src="images/Glacier-thumbnail.png" alt="ATLA" onclick="openModal('images/Glacier.png')">
-									<img src="images/Volcano-thumbnail.png" alt="ATLA" onclick="openModal('images/Volcano.png')">
-									<img src="images/topazeye-thumbnail.jpg" alt="ATLA" onclick="openModal('images/topazeye.jpg')">
-									<img src="images/sakura-thumbnail.jpg" alt="Sakura" onclick="openModal('images/sakura.jpg')">
+								<p><br/>I don't know but I really love drawing eyes so much, and I actually have a collection of eyes I doodled on Google Keep on my phone's little screen. Yes, I was inspired by the 4 elements in <i>Avatar the Legend of Aang</i>. An addition, a turquoise eye I painted (doodled) with watercolor on a little piece of paper. And some other Keep notes doodles.</p>
+								<div class="shelf auto-slide">
+									<div class="shelf-item"><img src="images/Forest-thumbnail.png" alt="ATLA" onclick="openModal('images/Forest.png')"></div>
+									<div class="shelf-item"><img src="images/Storm-thumbnail.png" alt="ATLA" onclick="openModal('images/Storm.png')"></div>
+									<div class="shelf-item"><img src="images/Volcano-thumbnail.png" alt="ATLA" onclick="openModal('images/Volcano.png')"></div>
+									<div class="shelf-item"><img src="images/Glacier-thumbnail.png" alt="ATLA" onclick="openModal('images/Glacier.png')"></div>
+									<div class="shelf-item"><img src="images/topazeye-thumbnail.jpg" alt="topaz" onclick="openModal('images/topazeye.jpg')"></div>
+									<div class="shelf-item"><img src="images/juice-thumbnail.jpg" alt="Orange Juice" onclick="openModal('images/juice.jpg')"></div>
+									<div class="shelf-item"><img src="images/sakura-thumbnail.jpg" alt="Sakura" onclick="openModal('images/sakura.jpg')"></div>
 								</div>
 
-								<p><br/>Here's some abstract stuffs. These are not necessarily good, but the colors are nice in my opinion. <i>Find my name in the first image!</i></p>
+								<p><br/>And some abstracts. These are not necessarily good, but the colors are nice in my opinion. <i>Try to find my name in the first image!</i></p>
 
-								<div class="gallery">
-									<img src="images/mirror-thumbnail.jpg" alt="Mirrors" onclick="openModal('images/mirror.jpg')">
-									<img src="images/abstract02-thumbnail.jpg" alt="Abstract02" onclick="openModal('images/abstract02.jpg')">
-									<img src="images/abstract01-thumbnail.jpg" alt="Abstract01" onclick="openModal('images/abstract01.jpg')">
+								<div class="shelf">
+									<div class="shelf-item"><img src="images/mirror-thumbnail.jpg" alt="Mirrors" onclick="openModal('images/mirror.jpg')"></div>
+									<div class="shelf-item"><img src="images/abstract01-thumbnail.jpg" alt="Abstract01" onclick="openModal('images/abstract01.jpg')"></div>
+									<div class="shelf-item"><img src="images/abstract02-thumbnail.jpg" alt="Abstract02" onclick="openModal('images/abstract02.jpg')"></div>
 								</div>
 
-								<!-- <p><br/>I draw and sketch a lot when I'm bored in class. You can see here some of what I can find in a pile of shipwreck. But most of the sketches below are gifts for a friend or family on their birthday (gifts are not drawn in class, of course). And that Spongebob one was drawn in the spirit of meme.</p>
-								<div class="gallery">
-									<img src="images/sketch-whale.jpg" alt="Whale" onclick="openModal('images/sketch-whale.jpg')">
-									<img src="images/syafiq-sketch-thumbnail.jpg" alt="Ahmad Syafiq Sketch" onclick="openModal('images/syafiq-sketch.jpg')">
-									<img src="images/sketch-rk.jpg" alt="Hana" onclick="openModal('images/sketch-rk.jpg')">
-									<img src="images/sketch-mw.jpg" alt="Wulan" onclick="openModal('images/sketch-mw.jpg')">
-									<img src="images/sketch-rn.jpg" alt="Revilda" onclick="openModal('images/sketch-rn.jpg')">
-									<img src="images/sketch-ye.jpg" alt="Yusuf" onclick="openModal('images/sketch-ye.jpg')">
-									<img src="images/sketch-hn.jpg" alt="Hafiz" onclick="openModal('images/sketch-hn.jpg')">
-									<img src="images/sketch-kirizan.jpg" alt="Kirizan" onclick="openModal('images/sketch-kirizan.jpg')">
-									<img src="images/sketch-iori.jpg" alt="Iori" onclick="openModal('images/sketch-iori.jpg')">
-									<img src="images/oneshot.jpg" alt="Oneshot" onclick="openModal('images/oneshot.jpg')">
-								</div> -->
+								<div class="shelf-gallery">
+									<!-- Shelf 1 -->
+									<p><br/>I sketch a lot when bored in class. But, most of the sketches below are gifts for a friend or family on their birthday (gifts are not drawn in class, of course).</p>
+									<div class="shelf auto-slide">
+										<div class="shelf-item">
+											<img src="images/sketch-rk.jpg" alt="Hana" onclick="openModal('images/sketch-rk.jpg')">
+										</div>
+										<div class="shelf-item">
+											<img src="images/sketch-mw.jpg" alt="Wulan" onclick="openModal('images/sketch-mw.jpg')">
+										</div>
+										<div class="shelf-item">
+											<img src="images/sketch-rn.jpg" alt="Revilda" onclick="openModal('images/sketch-rn.jpg')">
+										</div>
+										<div class="shelf-item">
+											<img src="images/sketch-ye.jpg" alt="Yusuf" onclick="openModal('images/sketch-ye.jpg')">
+										</div>
+										<div class="shelf-item">
+											<img src="images/sketch-hn.jpg" alt="Hafiz" onclick="openModal('images/sketch-hn.jpg')">
+										</div>
+									</div>
+									<!-- Shelf 2 -->
+									<div class="shelf auto-slide">
+										<div class="shelf-item">
+											<img src="images/sketch-whale.jpg" alt="Whale" onclick="openModal('images/sketch-whale.jpg')">
+											<!-- <p class="caption">Majestic Whale</p> -->
+										</div>
+										<div class="shelf-item">
+											<img src="images/sketch-kirizan.jpg" alt="Kirizan" onclick="openModal('images/sketch-kirizan.jpg')">
+										</div>
+										<div class="shelf-item">
+											<img src="images/syafiq-sketch-thumbnail.jpg" alt="Ahmad Syafiq Sketch" onclick="openModal('images/syafiq-sketch.jpg')">
+										</div>
+										<div class="shelf-item">
+											<img src="images/sketch-iori.jpg" alt="Iori" onclick="openModal('images/sketch-iori.jpg')">
+										</div>
+										<div class="shelf-item">
+											<img src="images/oneshot.jpg" alt="Oneshot" onclick="openModal('images/oneshot.jpg')">
+										</div>
+									</div>
+								</div>
 
-								<p><br/>Let's look at photographs of flowers and moon, because why not. They're not drawings, but are so cool that I tempted to show off! The moon was photographed from the lens of a telescope when I was observing at <a href="https://www.instagram.com/imahnoong/" target="_blank"><i>Imah Noong</i></a> observatory and planetarium in Lembang, Bandung.</p>
+								<p><br/>That SpongeBob one at the last definitely was drawn in the spirit of meme. Anyway, let's take a look at photographs of flowers and moon, because, why not. Indeed they're not drawings, but are so cool that I tempted to show off! The moon was photographed from the lens of a telescope when I was observing at <a href="https://www.instagram.com/imahnoong/" target="_blank"><i>Imah Noong</i></a> observatory and planetarium in Lembang, Bandung.</p>
 								
 								<div class="gallery">
 									<img src="images/flower-yellow.jpg" alt="flower-yellow" onclick="openModal('images/flower-yellow.jpg')">
