major update and fix

--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@ for i in range(len(synd)):
 								
 								<!-- Pop-up Modal -->
 								<div id="popup-modal" class="modal">
-									<span class="prev" onclick="navigateImage(-1)">〈　　　</span>
+									<span class="prev" onclick="navigateImage(-1)">&#10216;</span>
 									<img id="popup-image" class="modal-content" src="" alt="">
-									<span class="next" onclick="navigateImage(1)">　　　〉</span>
+									<span class="next" onclick="navigateImage(1)">&#10217;</span>
 									<span class="close" onclick="closeModal()">&times;</span>
 								</div>
 								
