major fix and update

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
 				<!-- Header -->
 					<header id="header">
-						<div class="logo">
-							<span class="icon solid fa-hat-wizard"></span>
+						<div class="button-round">
+							<a href="#about" class="no-underline"><span class="icon solid fa-hat-wizard"></span></a>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -36,7 +36,6 @@
 								<li><a href="#galeri">Gallery</a></li>
 								<li><a href="#haiku">Haiku</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<!-- <li><a href="#elements">Elements</a></li> -->
 							</ul>
 						</nav>
 					</header>
@@ -48,7 +47,7 @@
 							<article id="projects">
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Here are some of my coursework projects. I mainly write in Python.<br/><br/></p>
+								<p>I mainly write in Python. You can see some of my coursework projects as a math student below. Here we go.<br/><br/></p>
 								<!-- Project 1 -->
 								<section>
 									<i class="icon solid fa-code"></i>
@@ -462,6 +461,21 @@ for i in range(len(synd)):
 									<li><a href="https://wa.me/6283845285336/" target="_blank" class="icon brands fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 								</ul>
 							</article>
+						<!-- About -->
+							<article id="about">
+								<h2 class="major">About</h2>
+								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<h4>Welcome to My Chamber of Secret!<br />(Not Really Hidden, But Let's Pretend)</h4>
+								<p>Hello world! I'm Sonia—a mathematics graduate and coding enthusiast curently living in the vibrant streets of Indonesia. Indeed, art was my first friend, astronomy stole my heart, and coding? It's the love of my life. Python is my soulmate (natural, intuitive, and most importantly, math expressions almost look like math expressions). But lately I've been diving into C#. It’s complicated, sure, but that’s half the fun.</p>
+								<p>When I'm not wrestling with codes or sketching away, you'll find me:<br 
+									/>🍿 Watching animes or reading mangas to compliment my nerdiness.<br 
+									/>🌟 Stargazing like the poetic soul I have.<br 
+									/>🍪 Experimenting with dessert recipes or spicing my life (literally) with hot dishes.<br 
+									/>🍥 Learning Japanese because, let's face it, life's better with a new challenge.</p>
+								<p>I seek to live no-regret life, hence I pour my heart into every project I take on (this website too, of course). And solving complex problems, creating impactful projects, or exploring new ways to express myself; these are chances to make my life a legend.</p>
+								<p>There's always more to discover. So, world, let's <a href="#contact">connect</a> and make something amazing together!—Or just take your time and <a href="#projects">explore</a>.</p>
+								<a href="#contact" class="button">Get in Touch</a>
+							</article>
 
 						<!-- Elements -->
 							<article id="elements">
@@ -493,16 +507,6 @@ for i in range(len(synd)):
 										<li>Etiam vel felis lorem.</li>
 										<li>Felis enim et feugiat.</li>
 									</ol>
-
-									<h4>Actions</h4>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions stacked">
-										<li><a href="#" class="button primary">Default</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
 								</section>
 
 								<section>
@@ -598,76 +602,6 @@ for i in range(len(synd)):
 											</tfoot>
 										</table>
 									</div>
-								</section>
-
-								<section>
-									<h3 class="major">Buttons</h3>
-									<ul class="actions">
-										<li><a href="#" class="button primary">Primary</a></li>
-										<li><a href="#" class="button">Default</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button">Default</a></li>
-										<li><a href="#" class="button small">Small</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="#" class="button primary icon solid fa-download">Icon</a></li>
-										<li><a href="#" class="button icon solid fa-download">Icon</a></li>
-									</ul>
-									<ul class="actions">
-										<li><span class="button primary disabled">Disabled</span></li>
-										<li><span class="button disabled">Disabled</span></li>
-									</ul>
-								</section>
-
-								<section>
-									<h3 class="major">Form</h3>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="demo-name">Name</label>
-												<input type="text" name="demo-name" id="demo-name" value="" placeholder="Jane Doe" />
-											</div>
-											<div class="field half">
-												<label for="demo-email">Email</label>
-												<input type="email" name="demo-email" id="demo-email" value="" placeholder="jane@untitled.tld" />
-											</div>
-											<div class="field">
-												<label for="demo-category">Category</label>
-												<select name="demo-category" id="demo-category">
-													<option value="">-</option>
-													<option value="1">Manufacturing</option>
-													<option value="1">Shipping</option>
-													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
-												</select>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-low" name="demo-priority" checked>
-												<label for="demo-priority-low">Low</label>
-											</div>
-											<div class="field half">
-												<input type="radio" id="demo-priority-high" name="demo-priority">
-												<label for="demo-priority-high">High</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-copy" name="demo-copy">
-												<label for="demo-copy">Email me a copy</label>
-											</div>
-											<div class="field half">
-												<input type="checkbox" id="demo-human" name="demo-human" checked>
-												<label for="demo-human">Not a robot</label>
-											</div>
-											<div class="field">
-												<label for="demo-message">Message</label>
-												<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
-										</ul>
-									</form>
 								</section>
 
 							</article>
