--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ for i in range(len(synd)):
 							<article id="galeri">
 								<h2 class="major">Gallery</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><br/><b>PLEASE DO NOT STEAL!</b><br />Click at any image to take a closer look. Click again to close.</p>
+								<p><br/><b>PLEASE DO NOT STEAL!</b><br />Click at any image to take a closer look. Click the image again to close.</p>
 								<p>In the last autumn, I submitted some kind of coins for a contest in a really amazing Japanese learning site I use, <a href="https://www.renshuu.org/" target="_blank"><i>renshuu.org</i></a>. <i>They would be cooler if you know the references!</i> I'll show them first at the top row because they're so cute, followed by another lovely drawings. <i class="icon solid fa-paw"></i></p>
 								
 								<div class="gallery">
