--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ for i in range(len(synd)):
 							<article id="galeri">
 								<h2 class="major">Gallery</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p><br/><b>PLEASE DO NOT STEAL!</b><br />Click at any image to take a closer look. Click the image again to close.</p>
+								<p><br/><b>PLEASE DO NOT STEAL!</b><br />Click at any image to take a closer look. Click anywhere to close.</p>
 								<p>In the last autumn, I submitted some kind of coins for a contest in a really amazing Japanese learning site I use, <a href="https://www.renshuu.org/" target="_blank"><i>renshuu.org</i></a>. <i>They would be cooler if you know the references!</i> I'll show them first at the top row because they're so cute, followed by another lovely drawings. <i class="icon solid fa-paw"></i></p>
 								
 								<div class="gallery">
@@ -269,7 +269,7 @@ for i in range(len(synd)):
 								<!-- Pop-up Modal -->
 								<div id="popup-modal" class="modal">
 									<span class="prev" onclick="navigateImage(-1)">&#10216;</span>
-									<img id="popup-image" class="modal-content" src="" alt="">
+									<div class="modal-content"></div>
 									<span class="next" onclick="navigateImage(1)">&#10217;</span>
 									<span class="close" onclick="closeModal()">&times;</span>
 								</div>
@@ -288,7 +288,7 @@ for i in range(len(synd)):
                     <blockquote>俳句とは<br />星空と海<br />僕と君</blockquote>
                   </div>
                 </div>
-								<p>Let's see if you can guess the theme in each one. Click any card to switch that Runes into English version. ✨ぜ✨ひ✨お楽しみください！＿＿<i class="icon solid fa-pen-nib"></i></p>
+								<p>Let's see if you can guess the theme in each one. Click at any card to switch that Runes into English version. ✨ぜ✨ひ✨お楽しみください！＿＿<i class="icon solid fa-pen-nib"></i></p>
                 <div class="card-container">
                   <div class="card">
                     <div class="front">
