--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<html>
+<html lang="en">
 	<head>
 		<title>Sonia Augustin</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -20,14 +20,13 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="button-round">
-							<a href="#about" class="no-underline"><span class="icon solid fa-user-astronaut"></span></a>
+							<a href="#about" class="no-underline"><span class="icon solid fa-hat-wizard"></span></a>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Hi, I'm <b>Sonia</b></h1>
 								<p>your friend from Indonesia.<br />
-								I sketch, write codes <b>AND</b>, of course, haiku.<br />
-								This way, let me guide you through my legacy.</p>
+									I <b><span class="animated-text"></span></b></p>
 							</div>
 						</div>
 						<nav>
@@ -233,7 +232,7 @@ for i in range(len(synd)):
 									</div>
 								</div>
 
-								<p><br/>And some abstracts. These are not necessarily good, but the colors are nice in my opinion. <i>Try to find my name in the first image!</i> <i class="icon solid fa-palette"></i></p>
+								<p><br/>And some abstracts. These are not necessarily good, but the colors are nice in my opinion. <i>Try to find my name in the first image!</i></p>
 								<div class="shelf">
 									<div class="shelf-item"><img src="images/img04-thumbnail.jpg" alt="Mirror" onclick="openModal('images/img04.jpg')"></div>
 									<div class="shelf-item"><img src="images/img05-thumbnail.jpg" alt="Sun" onclick="openModal('images/img05.jpg')"></div>
@@ -257,7 +256,7 @@ for i in range(len(synd)):
 									</div>
 								</div>
 
-								<p><br/>That SpongeBob comic one at the last was definitely drawn in the spirit of meme. Anyway, let's take a look at photographs of flowers and moon, because, why not. Indeed they're not drawings, but are so cool that I tempted to show off! The moon was photographed from the lens of a telescope when I was observing at <a href="https://www.instagram.com/imahnoong/" target="_blank"><i>Imah Noong</i></a> observatory and planetarium in Lembang, Bandung. <i class="icon solid fa-camera-retro"></i></p>
+								<p><br/>That SpongeBob comic one at the last was definitely drawn in the spirit of meme. Anyway, let's take a look at photographs of flowers and moon, because, why not. Indeed they're not drawings, but are so cool that I tempted to show off! The moon was photographed from the lens of a telescope when I was observing at <a href="https://www.instagram.com/imahnoong/" target="_blank"><i>Imah Noong</i></a> observatory and planetarium in Lembang, Bandung.</p>
 								<div class="gallery">
 									<img src="images/flower-yellow.jpg" alt="" onclick="openModal('images/flower-yellow.jpg')">
 									<img src="images/img10-thumbnail.jpg" alt="imah-noong" onclick="openModal('images/img10.jpg')">
@@ -349,7 +348,7 @@ for i in range(len(synd)):
                       <p><i class="icon solid fa-users"></i><br />遊んだり<br />遊ばされたり<br />この社会</p>
                     </div>
                     <div class="back">
-                      <p><i class="icon solid fa-user-astronaut"></i><br />I'm sorry, but<br />I'm too scared<br />To show the meaning</p>
+                      <p><i class="icon solid fa-hat-wizard"></i><br />I'm sorry, but<br />I'm too shy<br />To show the meaning</p>
                     </div>
                   </div>
 
@@ -385,7 +384,7 @@ for i in range(len(synd)):
                       <p><i class="icon solid fa-user-ninja"></i><br />大人もね<br />かくれんぼして<br />宿敵と</p>
                     </div>
                     <div class="back">
-                      <p><i class="icon solid fa-user-astronaut"></i><br />I'm sorry, but<br />I'm too scared<br />To show the meaning</p>
+                      <p><i class="icon solid fa-hat-wizard"></i><br />I'm sorry, but<br />I'm too shy<br />To show the meaning</p>
                     </div>
                   </div>
 
@@ -445,7 +444,7 @@ for i in range(len(synd)):
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4" placeholder="Hi, Sonia!" required></textarea>
+											<textarea name="message" id="message" rows="4" placeholder="" required></textarea>
 										</div>
 									</div>
 									<ul class="actions">
@@ -461,20 +460,25 @@ for i in range(len(synd)):
 									
 								</ul>
 							</article>
+
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+								<span class="icon solid fa-dungeon"></span>
 								<p><b>Welcome to My Chamber of Secret! (Not Really Hidden, But Let's Pretend)</b><br
-									/>Hello world! I'm Sonia—a mathematics graduate and coding enthusiast curently living in the vibrant streets of Indonesia. Art🎨 was my first friend, astronomy🔭 stole my heart, and coding? It's the love of my life. Python🐍 is my soulmate (natural, intuitive, and most importantly, math expressions look like math expressions). But lately I've been diving into C#. It’s complicated, sure, but that’s half the fun.</p>
+									/>Hello world! I'm Sonia—a mathematics graduate and coding enthusiast living in the vibrant streets of Indonesia. Art🎨 was my first friend, astronomy🔭 stole my heart, and coding? It's the love of my life. Python🐍 is my soulmate (natural, intuitive, and most importantly, math expressions look like math expressions). But lately I've been diving into C#. It’s complicated, sure, but that’s half the fun.</p>
 								<p>When I'm not wrestling with scripts or sketching away, you'll find me:<br 
 									/>🍿Watching animes to compliment my nerdiness.<br 
 									/>🌟Stargazing like the poetic soul I have.<br 
 									/>🥙Experimenting with recipes or spicing my life (literally) with hot dishes.🔥<br 
 									/>🌸Learning Japanese because, let's face it, life's better with a new challenge. ✧</p>
-								<p>I seek to live no-regret life, hence I pour my heart into every project I take on (this website too, of course). And: solving complex problems, creating impactful projects, or exploring new ways to express myself; these are chances to make my life a legend.</p>
+								<p>I seek to live no-regret life, hence I pour my heart into every project I take on (this website too, of course ✨). And: solving complex problems, creating impactful projects, or exploring new ways to express myself; these are chances to make my life a legend.</p>
 								<p>There's always more to discover. So, world, let's <a href="#contact">connect</a> and make something amazing together!—Or just take your time and <a href="#projects">explore</a>. (=^･ｪ･^=)</p>
 								<ul class="actions"><li><a href="#contact" class="button">Get in Touch</a></li><li><a href="#projects" class="button">See Projects</a></li></ul>
+								<div class="center-container">
+									<p>Sonia uses Natural Intelligence, she can make mistakes.</p>
+								</div>
 							</article>
 
 					</div>
